test/IR/move-analysis.src
// V %srcc --ir --verify %s
program test;

struct Small {
    int x;
    delete { }
};

proc sink(Small) extern;
proc sink_int(int) {}
proc sink_in(in Small) {}
proc sink_copy(__srcc_by_value__ Small) {}
proc sink_move(Small) {}

proc f1 {
    var s = Small(42);
    delete s;
    s = Small(45);
    delete s;
}

proc f2 (bool x) {
    var s = Small(42);
    if x {
        delete s;
    } else {
        delete s;
    }
}

proc f3 (bool x) {
    var s = Small(42);
    if x delete s;
}

proc f4 (bool x) {
    var s = Small(42);
    if x {} else delete s;
}

proc f5 {
    var s1 = Small(1);
    var s2 = Small(1);
    s1 >< s2;
}

proc f6 {
    Small(1);
    Small(2).x;
    sink_int(Small(3).x);
    sink_int(Small(5).x + Small(4).x);
    sink_in(Small(6));
    sink_copy(Small(7));
    sink_move(Small(8));
}

proc e1 {
    var s = Small(42);
    delete s; // expected-note: Deleted here
    delete s; // expected-error: 'delete' of deleted value
}

proc e2 -> int {
    var s = Small(42);
    delete s; // expected-note 2: Deleted here
    return s.x + s.x; // expected-error 2: Use of deleted value
}

proc e3 (bool x) -> int {
    var s = Small(42);
    if x {
        delete s;
    } else {
        delete s; // expected-note: Deleted here
    }
    return s.x; // expected-error: Use of deleted value
}

proc e4 (bool x) -> int {
    var s = Small(42);
    if x delete s; // expected-note: Deleted here
    return s.x; // expected-error: Use of deleted value
}

proc e5 (bool x) -> int {
    var s = Small(42);
    if x {} else delete s; // expected-note: Deleted here
    return s.x; // expected-error: Use of deleted value
}

proc e6() {
    Small x;
    loop {
        delete x; // expected-error ('delete' of deleted value) expected-note (Deleted here)
    }
}

proc e7 (out Small s1) { // expected-error: 'out' parameter is not written to on all control paths
    var s = s1; // expected-error: 'out' parameter must be written to before it can be used
}

proc e8 {
    var s1 = Small(42);
    var s2 = s1; // expected-note: Moved here
    var s3 = s1; // expected-error: Use of moved value
}

proc e9 (bool b) {
    var s1 = Small(42);
    if b { var s2 = s1; } // expected-note: Moved here
    var s3 = s1; // expected-error: Use of moved value
}

proc e10 {
    var s1 = Small(42);
    sink(s1); // expected-note: Moved here
    var s3 = s1; // expected-error: Use of moved value
}

proc e11 {
    // Passing a type that requires deletion 'by value' doesn't copy it; it still moves it.
    var s = Small(42);
    sink_copy(s); // expected-note: Moved here
    sink_copy(s); // expected-error: Use of moved value
}